test/gpu/native/assertOnFailToGpuize.2.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuize.chpl:30: error: Loop containing assertOnGpu() is not Gpuizable
assertOnFailToGpuize.chpl:7: note: function is recursive
